strcutred divs generated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+    <div class="main-container">
+        <h1> Seesaw Physics Simulator </h1>
+        <div class="top-indicators"></div>
+        <div class="visual-frame"></div>
+        <div class="button-block"></div>
+        <div class="logs-panel"></div>
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
