--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
 <body>
     <div class="main-container">
         <h1> Seesaw Physics Simulator </h1>
-        <div class="top-indicators"></div>
-        <div class="visual-frame"></div>
-        <div class="button-block"></div>
-        <div class="logs-panel"></div>
+
+        <div class="top-indicators">
+            <div class="indicator"> 
+                <span>Angle</span>
+                <span>18</span>
+            </div>
+            <div class="indicator"> 
+                <span>Next Weight</span>
+                <span>4</span>
+            </div>
+        </div>
+        <div class="visual-frame">
+
+        </div>
+        <div class="button-block">
+            
+        </div>
+        <div class="logs-panel">
+
+        </div>
     </div>
 
 
