--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="main-container">
-        <h1> Seesaw Physics Simulator </h1>
+        <h1 style="font-size: 30px;"> Seesaw Physics Simulator </h1>
 
         <div class="top-indicators">
             <div class="top-indicator"> 
@@ -37,8 +37,22 @@
             <button class="buttons reset-button" > Reset </button>
             <button class="buttons pause-button" > Pause </button>
         </div>
+        
         <div class="logs-panel">
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
         </div>
     </div>
 
