--- a/index.html
+++ b/index.html
@@ -69,14 +69,12 @@
 
 
             <div class="logs-panel">
-
-            <br>
             </div>
         </div>
 
     </div>
 
 
-    <script src="script.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
